Fixing alignment

--- a/espace.css
+++ b/espace.css
@@ -20,6 +20,7 @@
 .group {
 	position: relative;
 	margin-bottom: 200px;
+	width: 960px;
 }
 
 .espace {
