--- a/nav.css
+++ b/nav.css
@@ -9,6 +9,7 @@
 #nav {
 	position: relative;
 	z-index: 1;
+	top: 75px;
 }
 
 .nav {
